[package]
name = "etcd-rs"
version = "0.5.0"
authors = ["ccc <currantxx@gmail.com>"]
edition = "2018"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/luncj/etcd-rs"
homepage = "https://github.com/luncj/etcd-rs"
description = "etcd client for rust"
documentation = "https://docs.rs/etcd-rs"
license = "MIT"

[dependencies]
tonic = { version = "0.6", features = ["tls"] }
bytes = "1.0"
prost = "0.9"
tokio = "1.0"
tokio-stream = "^0.1"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.6"
