[package]
name = "etcd-rs"
version = "1.0.1"
authors = ["lodrem <jialun.cai@pm.me>"]
edition = "2021"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/lodrem/etcd-rs"
homepage = "https://github.com/lodrem/etcd-rs"
description = "etcd client for rust"
documentation = "https://docs.rs/etcd-rs"
license = "MIT"

[features]
default = ["tls"]
tls = ["tonic/tls", "tokio/fs"]

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = "1.27"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
tokio = { version = "1.27", features = ["full"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.9"
